test/e2e/artifacts/environments/dev/base-kind-istio/destination-rules.yaml
# **WARNING** Only use in testing scenarios
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ${EPP_NAME}-insecure-tls
spec:
  host: ${EPP_NAME}
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
