test/e2e/artifacts/environments/dev/base-kind-istio/patch-deployments.yaml
# Patch to set pool-namespace to "default" for KIND development environments
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${EPP_NAME}
spec:
  template:
    spec:
      containers:
      - name: epp
        args:
        - --pool-name
        - "${POOL_NAME}"
        - --pool-namespace
        - "default"
        - --v
        - "4"
        - --zap-encoder
        - "json"
        - --grpc-port
        - "9002"
        - --grpc-health-port
        - "9003"
        - --config-file
        - "/etc/epp/epp-config.yaml"
        - --metrics-endpoint-auth=false
        - --ha-enable-leader-election=${ENABLE_LEADER_ELECTION}
