test/e2e/artifacts/environments/dev/base-kind-istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/service-type: NodePort
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: inference-gateway
    istio.io/enable-inference-extproc: "true"
  name: inference-gateway-istio-nodeport
spec:
  type: NodePort
  selector:
    gateway.networking.k8s.io/gateway-name: inference-gateway
  ports:
  - appProtocol: tcp
    name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
    nodePort: 32021
  - appProtocol: http
    name: default
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
